// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Button (unit tests) when the component loads with a label should match the snapshot 1`] = `
<kv-radio label="Accepted">
  <template shadowrootmode="open">
    <div class="radio-container radio-container--size-small">
      <div class="circle" tabindex="0">
        <slot name="action-icon">
          <kv-icon name="kv-radio-btn" part="icon"></kv-icon>
        </slot>
      </div>
      <span class="label" part="label">
        Accepted
      </span>
    </div>
  </template>
</kv-radio>
`;

exports[`Radio Button (unit tests) when the component loads with checked prop should match the snapshot 1`] = `
<kv-radio checked="" label="">
  <template shadowrootmode="open">
    <div class="radio-container radio-container--size-small">
      <div class="circle" tabindex="0">
        <slot name="action-icon">
          <kv-icon name="kv-radio-btn-selected" part="icon"></kv-icon>
        </slot>
      </div>
    </div>
  </template>
</kv-radio>
`;

exports[`Radio Button (unit tests) when the component loads with default props should match the snapshot 1`] = `
<kv-radio label="">
  <template shadowrootmode="open">
    <div class="radio-container radio-container--size-small">
      <div class="circle" tabindex="0">
        <slot name="action-icon">
          <kv-icon name="kv-radio-btn" part="icon"></kv-icon>
        </slot>
      </div>
    </div>
  </template>
</kv-radio>
`;

exports[`Radio Button (unit tests) when the component loads with disabled prop should match the snapshot 1`] = `
<kv-radio disabled="" label="">
  <template shadowrootmode="open">
    <div class="disabled radio-container radio-container--size-small">
      <div class="circle" tabindex="-1">
        <slot name="action-icon">
          <kv-icon name="kv-radio-btn" part="icon"></kv-icon>
        </slot>
      </div>
    </div>
  </template>
</kv-radio>
`;
